# poc_dbt_dremio_airflow

./: README.md  docker-compose.yaml  pyproject.toml
src/dags/: etl_dbt_dremio.py
src/minio_bucket/: load_raw.py
src/spark/applications/: spark_parquet.py
